--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -43,10 +43,13 @@
                     </ng-template>
                 </p-autoComplete>
             </div>
+            <!--
             <div class="mb-2">
                     <p-autoComplete [(ngModel)]="city" [suggestions]="filteredCitiesSingle" (completeMethod)="filterCitySingle($event)" field="name" [size]="30"
                     placeholder="City" [minLength]="1"></p-autoComplete>
             </div>
+            -->
+            <input type="text" pInputText [(ngModel)]="city" class="w-100 mb-2" placeholder="City">
             <textarea pInputTextarea [(ngModel)]="intro" placeholder="Introduction"></textarea>
         </div>
     </div>
